styles.css
:root {
    --main-color: #0B5351;
    --secondary-color: #530B0D;
}

* {
    padding: 0;
    margin: 0;
    scroll-behavior: smooth;
}

.links {
    box-sizing: border-box;
    display: flex;
    justify-content: center;
    list-style: none;
    height: 60px;
    margin-left: 1vw;
    gap: 40px;
}

.link {
    display: flex;
    justify-content: center;
    align-items: center;
    box-sizing: border-box;
    padding: 20px;
    height: 60px;
    width: 120px;
    cursor: pointer;
    transition: .2s;
    font-size: 24px;
}

.link:hover {
    border-bottom: white 2px solid;
    margin-top: -2px;
}

a {
    text-align: center;
    text-decoration: none;
    color: white;
    font-weight: 100;
    font-family: 'Reem Kufi Fun', sans-serif;
}

header {
    background-color: #231F20;
    height: 60px;
    position: fixed;
    top: 0;
    width: 100vw;
    z-index: 100;
}

#navbar {
    display: flex;
    justify-content: center;
    top: 0;
    position: fixed;
    z-index: 100;
    width: 100%;
    height: 60px;
}

#nav-logo {
    position: absolute;
    margin-left: 20vw;
    cursor: pointer;
    height: 60px;
    z-index: 3;
}

#nav-image {
    height: 60px;
    cursor: pointer;

}


.home-container {
    position: relative;
    margin-top: 60px;
    background-color: black;
    background-image: url(/images/front-hood-buff.jpeg);
    height: 900px;
    opacity: 0;
    transition: .5s;
}

.fade-in {
    opacity: 1;
}

.home-titles {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    bottom: 50vh;
    opacity: 0;
    position: absolute;
    font-family: 'Reem Kufi Fun', sans-serif;
    font-weight: 300;
    transition: 1s;
}

.home-title-onload {
    opacity: 1;
    bottom: 25vh;
}

#home-slogan {
    /* margin-left: 3vw; */
    margin-top: -40px;
}

.home-learn-more {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 5vw;
    height: 5vh;
    border-radius: 20px;
    border: none;
    color: white;
    background-color: black;
    cursor: pointer;
    font-family: 'Reem Kufi Fun', sans-serif;
    font-weight: 300;
    font-size: 16px;
    transition: .5s;
    border: 1.5px black solid;
}

.home-learn-more:hover {
    background-color: white;
    color: black;
}

#logo {
    width: 400px;
    margin-left: 6px;
}


.section2 {
    height: 2000px;
    background-color: #231F20;
}



@media only screen and (max-width: 750px) {
    header {
        display: flex;
        justify-content: center;
        align-items: center;
    }

    .links {
        display: none;
    }


    #nav-logo {
        margin-left: 0;
    }
}

